syntax="proto3";

package pb;
import "google/protobuf/timestamp.proto";
import "internal/service/pb/taskModels.proto";

option go_package="/internal/service;service";

message TaskRequest {
  uint64 TaskId=1;
  uint64 UserId=2;
  uint32 Status=3;
  string Title=4;
  string Content=5;
  google.protobuf.Timestamp StartTime=6;
  google.protobuf.Timestamp EndTime=7;
}

message TaskDetailResponse {
  repeated TaskModel TaskDetail=1;
  uint32 Code=2;
}

message CommonResponse {
  uint32 Code=1;
  string Msg=2;
  string Data=3;
}

service TaskService {
  rpc TaskCreate(TaskRequest) returns(CommonResponse);
  rpc TaskUpdate(TaskRequest) returns(CommonResponse);
  rpc TaskShow(TaskRequest) returns(TaskDetailResponse);
  rpc TaskDelete(TaskRequest) returns(CommonResponse);
}